2002-06-15  John Levon  <moz@compsoc.man.ac.uk>

	* libop/Makefile.in:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: new files split out, defines
	  changed

	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* dae/oprofiled.c:
	* gui/oprof_start.cpp:
	* libop/op_events.h: 
	* libop/op_events.c: 
	* libop/op_events_desc.h:
	* libop/op_events_desc.c: 
	* libop/op_interface.h:
	* libop++/op_print_event.h: 
	* module/oprofile.h:
	* module/x86/op_nmi.c: changes from above
 
2002-06-15  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: compile module early as it's most
	  likely to fail
 
	* TODO: update
 
	* doc/oprofile.xml:
	* configure.in: remove unneeded --with-cc
 
	* module/x86/Makefile.in: use USE_STANDARD_AS_RULE
 
	* module/x86/op_nmi.c: add preemption exclusion

2002-06-15  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_parse_proc.c: remove FIXME. We are fine to
	  assume first entry in maps is the executable, because
	  this is exactly what the kernel does (see /proc/pid/exe)
 
2002-06-15  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.cpp: call check_mtime() correctly
	  for shared libraries
 
2002-06-14  John Levon  <moz@compsoc.man.ac.uk>

	* libop/op_events.c: add warning
 
	* module/Makefile.in: link against libop.a like I meant to
 
	* module/oprofile.h:
	* module/oprofile.c: readability cleanup
 
2002-06-11  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat.h:
	* module/x86/arch_compat.h: remove arch_compat.h,
	  add BUG_ON()

	* module/op_util.c: return -EINVAL not 1 from check_range() 

	* module/oprofile.c: use BUG_ON() in release functions,
	  fix use of check_range, remove spurious check for malloc
	  failure (already checked)

	* module/oprofile.h: clarify API 

	* module/x86/op_msr.h: new file, MSR back-compat

	* module/x86/op_nmi.c:
	* module/x86/op_apic.c: use it
 
2002-06-10  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* configure.in: remove old checks we don't need.
	  Add to EXTRA_CFLAGS not KCFLAGS 
