@@ -31,12 +31,20 @@
 
 /** Data type to transfer samples counts from the module to the daemon */
 struct op_sample {
-	/** samples count; high order bits contains the counter nr */
-	u16 count;
-	u16 pid;	/**< 32 bits but only 16 bits are used currently */
-	u32 eip;	/**< eip value where occur interrupt */
+	u16 count; /**< samples count; high order bits contains the counter nr */
+	u16 pid; /**< 32 bits but only 16 bits are used currently */
+	u32 eip; /**< eip value where occur interrupt */
 } __attribute__((__packed__, __aligned__(8)));
 
+/**
+ * The head structure of a kernel sample buffer.
+ */
+struct op_buffer_head {
+	int cpu_nr; /**< the CPU number of this buffer */
+	size_t count; /**< number of samples in this buffer */
+	struct op_sample buffer[0]; /**< the sample buffer */
+};
+	 
 /**
  * Data type used by the module to notify daemon of fork/exit/mapping etc.
  * Meanings of fields depend on the type of notification encoded in the type
